kept previous code to make notebook plots in profiles

--- a/notebooks/ClusterProfiles.ipynb
+++ b/notebooks/ClusterProfiles.ipynb
@@ -153,8 +153,11 @@
     "    scaled_radii = r_mid / rnormalization\n",
     "    scaled_profile = calculate_scaled_profile(profile_scaling_function, profile,\n",
     "                                             **profile_scaling_kwargs)\n",
+    "    \n",
     "    scaled_profile_in_rbins = np.interp(rbins, scaled_radii, scaled_profile) \n",
+    "    \n",
     "    assert(scaled_profile_in_rbins.shape == rbins.shape)\n",
+    "    \n",
     "    return scaled_profile_in_rbins\n",
     "\n",
     "def calculate_scaled_profile(profile_scaling_function, profile, \n",
@@ -200,7 +203,38 @@
     "    '''Calculates K_deltam.  Part of profile_scaling_function_collections. \n",
     "    Returns K_deltam in keV/cm**2. M_deltam (mass) expected in Msun/h'''\n",
     "    from astropy.cosmology import WMAP9 as cosmo    \n",
-    "    return 1963 * (mass/1e15)**(2./3) * (1./aexp)**(-2./3)\n"
+    "    return 1963 * (mass/1e15)**(2./3) * (1./aexp)**(-2./3)\n",
+    "\n",
+    "########################################################################################\n",
+    "\n",
+    "def calculate_scaled_profile_stats(halo_profiles_dict, halo_properties_dict, halo_ids, aexp, \n",
+    "                                    profile_name=None, profile_scaling_function=None, \n",
+    "                                   halo_props_kwargs=None,\n",
+    "                                    mass_min=1e13) :\n",
+    "    '''Get all the scaled profiles, calculate mean, median, and/or other quantities'''\n",
+    "\n",
+    "    scaled_profiles = []\n",
+    "    halo_profiles_dataframe = halo_profiles_dict[aexp]\n",
+    "    halo_properties_dataframe = halo_properties_dict[aexp]\n",
+    "    for halo_id in halo_ids :\n",
+    "        halo_id_profile_dataframe = halo_profiles_dataframe[halo_profiles_dataframe['id']==halo_id]\n",
+    "        halo_id_property_dataframe = halo_properties_dataframe[halo_properties_dataframe['id']==halo_id]\n",
+    "        r_mid = halo_id_profile_dataframe.as_matrix(columns=['r_mid'])[:,0]\n",
+    "        profile = halo_id_profile_dataframe.as_matrix(columns=[profile_name])[:,0]\n",
+    "        rnormalization = halo_id_property_dataframe.as_matrix(columns=['r500c'])[:,0]\n",
+    "        mass = halo_id_property_dataframe.as_matrix(columns=['M_total_500c'])[:,0]\n",
+    "        if mass < mass_min :\n",
+    "            continue\n",
+    "        scaled_profile = calculate_rbinned_scaled_profile(profile_scaling_function, \n",
+    "                                                          profile, r_mid, rnormalization, \n",
+    "                                                        rbins=rbins, aexp=aexp, \n",
+    "                                                         **profile_scaling_kwargs)\n",
+    "        scaled_profiles.append(scaled_profile)\n",
+    "        \n",
+    "    scaled_profiles = np.array(scaled_profiles)\n",
+    "    \n",
+    "    return scaled_profiles.mean(axis=0), scaled_profiles.median(axis=0), \\\n",
+    "            np.std(scaled_profiles, axis=0)\n"
    ]
   },
   {
